--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "lucide-react": "^0.555.0",
-    "next": "16.0.4",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.66.1",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0",
